# REAL-Neural-Substrate

./: .gitignore  AGENTS.md  README.md  analyze_experiment_output.py  analyze_transfer_timecourse.py  compare_cold_warm.py  compare_cyclic_transfer.py  compare_large_topology.py  compare_latent_ablations.py  compare_latent_context.py  compare_morphogenesis.py  compare_morphogenesis_large.py  compare_morphogenesis_large_carryover_bridge.py  compare_morphogenesis_large_mode_switched.py  compare_morphogenesis_large_paired.py  compare_sequential_transfer.py  compare_task_transfer.py  compare_transfer_matrix.py  evaluate_transfer_asymmetry.py  experiment_manifest.py  laminated_report_data.json  neural_baseline.py  parse_laminated.py  pyproject.toml  research_paper_draft.tex  run_phase8_demo.py  task_c_scale_clean.txt
.claude/: settings.local.json
docs/: 20260330 Redesign.md  CODE_TOUR.md  architecture_notes.md  benchmark_family_reference.md  layer2_regulatory_substrate_design.md  model_inputs_next_sequence_plan.md  project_overview_cross_phase.md  running_occupancy_v3.md  temporally_laminated_real_v0.md
occupancy_baseline/: 20260319_phase8_occupancy_adapter_trace.md  20260319_phase8_occupancy_baseline_setup_trace.md  20260319_phase8_occupancy_experiment_runner_trace.md  README.md  __init__.py  benchmark_protocol.md  dataset.py  mlp.py  presets.py
phase8/: __init__.py  adapters.py  admission.py  consolidation.py  environment.py  forecasting.py  hidden_regime.py  lamination.py  models.py  node_agent.py  scenarios.py  selector.py  substrate.py  topology.py
real_core/: __init__.py  consolidation.py  engine.py  interfaces.py  lamination.py  meta_agent.py  recognition.py  regulatory_substrate.py  selector.py  session_state.py  types.py  world_model.py
scripts/: __init__.py  analyze_b_to_c_visible_timecourse.py  analyze_experiment_output.py  analyze_experiment_outputs_folder.py  analyze_transfer_timecourse.py  c_family_orientation_light.py  c_family_train_eval_light.py  ceiling_benchmark_suite.py  compare_a_scale_suite.py  compare_b_scale_suite.py  compare_c_scale_suite.py  compare_ceiling_benchmarks.py  compare_cold_warm.py  compare_large_topology.py  compare_latent_ablations.py  compare_occupancy_baseline.py  compare_task_transfer.py  compare_transfer_matrix.py  debug_force_growth.py  diagnose_b_to_c_carryover.py  diagnose_b_to_c_carryover_bridge.py  diagnose_benchmark_node_probe.py  diagnose_c_growth_timing.py  evaluate_experience_extension.py  evaluate_hidden_regime_forecasting.py  evaluate_laminated_phase8.py  experiment_manifest.py  generate_trace_index.py  merge_ceiling_benchmarks.py  model_inputs_real_v1.py  neural_baseline.py  neural_baseline_mlp_explicit.py  neural_baseline_models.py  neural_baseline_train_fix.py  occupancy_real.py  occupancy_real_v2.py  occupancy_real_v3.py  occupancy_real_v3_light.py  paper_interpretability_figures.py  probe_phase8_recognition_bias.py  (+14 more)
tests/: test_a_scale_suite.py  test_analyze_experiment_output.py  test_b_scale_suite.py  test_b_to_c_carryover_bridge.py  test_b_to_c_carryover_diagnosis.py  test_b_to_c_visible_timecourse.py  test_benchmark_node_probe.py  test_c_family_orientation_light.py  test_c_family_real_diagnostic.py  test_c_family_train_eval_light.py  test_c_growth_timing.py  test_c_hr_overlap_topology.py  test_c_node_probe.py  test_c_scale_suite.py  test_ceiling_benchmarks.py  test_compare_transfer_matrix.py  test_debug_force_growth.py  test_experience_extension.py  test_experiment_manifest.py  test_generate_trace_index.py  test_hidden_regime_forecasting.py  test_lamination.py  test_latent_context_tracker.py  test_latent_growth_gate.py  test_latent_route_transform_gate.py  test_model_inputs_real_v1.py  test_occupancy_real.py  test_occupancy_real_v2.py  test_occupancy_real_v3.py  test_occupancy_real_v3_light.py  test_paper_interpretability_figures.py  test_phase8.py  test_phase8_capability_prediction.py  test_phase8_context_uncertainty.py  test_phase8_lamination.py  test_real_core.py  (+8 more)
(+617 files in other folders)
