[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-neural-substrate"
version = "0.1.0"
description = "REAL native substrate research prototype built from the generalized allostatic core and Phase 8 neural substrate experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[tool.setuptools]
packages = ["real_core", "phase8"]

[project.scripts]
real-phase8-demo = "run_phase8_demo:main"
real-cold-warm = "compare_cold_warm:main"
real-task-transfer = "compare_task_transfer:main"
real-large-topology = "compare_large_topology:main"
real-morphogenesis-large = "compare_morphogenesis_large:main"
real-morphogenesis-large-paired = "compare_morphogenesis_large_paired:main"
real-sequential-transfer = "compare_sequential_transfer:main"
real-cyclic-transfer = "compare_cyclic_transfer:main"
real-neural-baseline = "neural_baseline:main"
